# swarmfix

./: .gitignore  README.md  pyproject.toml
configs/: 01_square_static.toml  02_grid_10_agents.toml  03_common_bias_failure.toml  04_mission_reference.toml  05_spatially_correlated_gnss.toml
experiments/: 01_gnss_only_baseline.py  02_known_topology_alignment.py  03_uwb_gnss_fusion.py  04_common_bias_failure_case.py  05_reference_bias_correction.py  06_full_workflow_demo.py  07_export_threejs_scene.py  08_solver_trace_viewer_demo.py  09_uwb_link_density_sweep.py  10_profile_live_solve.py  11_viewer_diagnostics_run.py  11_viewer_diagnostics_test_plan.md  helpers.py  viewer_diagnostics_runner.py
native/uwb_gnss_solver/: CMakeLists.txt
native/uwb_gnss_solver/include/: swarmfix_uwb_gnss_solver.h
native/uwb_gnss_solver/src/: swarmfix_uwb_gnss_solver.c
swarmfix/: __init__.py  cli.py  run_all_configs.py
tests/: test_c_solver_backend.py  test_cli.py  test_estimation.py  test_evaluation.py  test_experiments.py  test_io.py  test_live_frame_api.py  test_live_frame_models.py  test_live_selection_position_source.py  test_live_sensor_snapshot.py  test_live_server_connection.py  test_live_solver.py  test_live_solver_observability.py  test_live_uwb_selection.py  test_mission_action_api.py  test_mission_actions.py  test_models.py  test_observability.py  test_quality_observability_report.py  test_scenarios.py  test_sensors.py  test_solver_backend.py  test_viewer_diagnostics_runner.py  test_viewer_schema.py  test_visualisation.py  test_workflow.py
viewer/: README.md  index.html  (+3 more)
(+215 files in other folders)
